VFS-1768: Changing main background to JPG

--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -96,7 +96,7 @@ img {
 }
 
 html {
-  background: url('/assets/images/main-background.png') no-repeat center center fixed;
+  background: url('/assets/images/main-background.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
