--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -350,14 +350,20 @@ $search-box-height: 36px;
       li {
         padding: 0 10px;
         margin: 0;
-        cursor: pointer; cursor: hand;
+      }
+    }
+  }
 
+  .sidebar-list:not(.non-hoverable) {
+    ul:not(.non-hoverable) {
+      li:not(.non-hoverable) {
         &:hover {
           background-color: rgba(255, 255, 255, 0.1);
         }
       }
     }
   }
+
 
   // specific styles for spaces-accordion, see also .accordion styles
   // TODO: shared classes
