--- a/src/http/gui/app/templates/components/accounts-list.hbs
+++ b/src/http/gui/app/templates/components/accounts-list.hbs
@@ -1,6 +1,6 @@
 <ul class="accordion-content">
   {{#each authorizers as |account|}}
-    <li>
+    <li class="non-hoverable">
       {{account-item type=account.type label=account.email}}
     </li>
   {{/each}}
