--- a/src/http/gui/app/templates/components/alias-panel.hbs
+++ b/src/http/gui/app/templates/components/alias-panel.hbs
@@ -2,7 +2,7 @@
   {{!-- faking the accordion group... this should be separate class --}}
   <div class="accordion-group secondary-accordion-group spaces-accordion-group">
     <div class="accordion-heading secondary-accordion-heading spaces-accordion-heading">
-      <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle create-new mouse-pointer"
+      <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle create-new clickable"
         {{action 'startEditAlias'}}>
         <div class="secondary-icon">
           {{one-icon icon='user'}}
