--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -1,7 +1,7 @@
 <div class="accordion-group secondary-accordion-group spaces-accordion-group">
   <div class="accordion-heading secondary-accordion-heading spaces-accordion-heading">
     <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle">
-      <div class="mouse-pointer" data-toggle="collapse" href="#collapse-space-{{space.id}}">
+      <div class="clickable" data-toggle="collapse" href="#collapse-space-{{space.id}}">
         <div class="secondary-icon space-icon">
           {{one-icon icon=(if space.isDefault "space-home" "space")}}
         </div>
@@ -18,7 +18,8 @@
           </div>
         {{/if}}
       </div>
-      <div class="providers-count" data-toggle="collapse" href="#collapse-space-{{space.id}}">
+      <div class="providers-count clickable" data-toggle="collapse"
+        href="#collapse-space-{{space.id}}">
         <div class="icon">
           {{one-icon icon="provider"}}
         </div>
@@ -33,7 +34,7 @@
     <div class="accordion-inner">
       <ul>
         {{#each space.providers as |p|}}
-          <li {{action "goToProvider" p}}>
+          <li {{action "goToProvider" p}} class="clickable">
             <div class="icon">
               {{one-icon icon=(if p.isDefault "provider-home" "provider")}}
             </div>
@@ -46,7 +47,7 @@
           {{!-- TODO: create some dropdown component, which does not close on click --}}
           {{!-- TODO: like this: http://stackoverflow.com/questions/25089297/twitter-bootstrap-avoid-dropdown-menu-close-on-click-inside --}}
           <div class="dropdown side-dropdown">
-            <a href="#" class="dropdown-toggle side-dropdown-toggle"
+            <a href="#" class="dropdown-toggle side-dropdown-toggle full-width clickable"
               data-toggle="dropdown" role="button" aria-haspopup="true"
               aria-expanded="false" {{action 'getNewSupportToken'}}>
               <div class="icon">
