--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -60,13 +60,22 @@
             <div class="dropdown-menu dropdown-menu-right token-popup floater">
               {{!-- TODO: style/design --}}
               {{!-- TODO: loading icon --}}
-              <div class="input-with-button">
-                {{input id=(concat "support-token-" space.id) value=supportToken readonly=true}}
-                {{#copy-button success='copySuccess' error='copyError'
-                    clipboardTarget=(concat "#support-token-" space.id) class="btn btn-primary btn-right"}}
-                  {{one-icon icon='copy'}}
-                {{/copy-button}}
-              </div>
+              {{#if supportToken}}
+                <div class="input-with-button">
+                  {{input id=(concat "support-token-" space.id) value=supportToken readonly=true}}
+                  {{#copy-button success='copySuccess' error='copyError'
+                      clipboardTarget=(concat "#support-token-" space.id) class="btn btn-primary btn-right"}}
+                    {{one-icon icon='copy'}}
+                  {{/copy-button}}
+                </div>
+              {{else}}
+                <div class="one-row">
+                  <div class="loading-throbber inverted with-background"></div>
+                  <div class="loading-label">
+                    {{t 'common.fetchingToken'}}
+                  </div>
+                </div>
+              {{/if}}
             </div>
           </div>
         </li>
