--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -470,6 +470,7 @@ $search-box-height: 36px;
           padding-right: 24px;
           color: white;
           clear: both;
+          overflow-y: hidden;
 
           text-decoration: none !important;
           background-color: #3A3A3A;
@@ -769,10 +770,9 @@ $search-box-height: 36px;
 }
 
 .hover-parent {
-  &:hover {
-    // TODO: make a "hover-parent" class
+  &:not(:hover) {
     .visible-on-parent-hover {
-      color: white ;
+      color: transparent;
     }
   }
 }
