--- a/src/http/gui/app/templates/components/alias-panel.hbs
+++ b/src/http/gui/app/templates/components/alias-panel.hbs
@@ -9,7 +9,7 @@
         </div>
         <div class="secondary-header space-header stretch-hack">
           {{#if aliasEditing}}
-            {{input enter='endEditAlias' value=aliasTextEdit}}
+            {{input enter='endEditAlias' value=aliasTextEdit autofocus="autofocus"}}
           {{else}}
             {{#if correctAlias}}
               {{aliasText}}
@@ -18,6 +18,18 @@
             {{/if}}
           {{/if}}
         </div>
+        {{#if aliasEditing}}
+          <div class="secondary-icon" {{action 'endEditAlias' aliasTextEdit bubbles=false }}>
+            {{one-icon icon='checkbox-check'}}
+          </div>
+          <div class="secondary-icon" {{action 'cancelEditAlias' bubbles=false }} >
+            {{one-icon icon='checkbox-x'}}
+          </div>
+        {{else}}
+          <div class="secondary-icon">
+            {{one-icon icon='rename'}}
+          </div>
+        {{/if}}
       </a>
     </div>
   </div>
