VFS-1768: Lists sorting in onezone

--- a/src/http/gui/app/templates/components/accounts-list.hbs
+++ b/src/http/gui/app/templates/components/accounts-list.hbs
@@ -1,5 +1,5 @@
 <ul class="accordion-content">
-  {{#each authorizers as |account|}}
+  {{#each authorizersSorted as |account|}}
     <li class="non-hoverable">
       {{account-item type=account.type label=account.email}}
     </li>
