--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -1,5 +1,5 @@
 <div class="accordion secondary-accordion spaces-accordion">
-  {{#each spaces as |s|}}
+  {{#each spacesSorted as |s|}}
     {{spaces-accordion-item space=s}}
   {{/each}}
 
