--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -750,6 +750,12 @@ $search-box-height: 36px;
   }
 }
 
+.onezone-modal-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .floater {
   position: fixed !important;
   top: auto;
