VFS-1768: Sorting in provider drop

--- a/src/http/gui/app/templates/components/provider-place-drop.hbs
+++ b/src/http/gui/app/templates/components/provider-place-drop.hbs
@@ -14,7 +14,7 @@
       {{provider.location}}
     </div> --}}
     <ul>
-      {{#each provider.spaces as |space|}}
+      {{#each spacesSorted as |space|}}
         <li>
           <div class="space-icon">
             {{one-icon icon=(if space.isDefault "space-default" "space")}}
